src/patternfly/components/DualListSelector/dual-list-selector.scss
/* ... */
.#{$dual-list-selector}__item,
.#{$dual-list-selector}__main {
  display: flex;
}

.#{$dual-list-selector}__item,
.#{$dual-list-selector}__item-main {
  flex-basis: 100%;
}

.#{$dual-list-selector}__draggable {
  display: flex;

  + .#{$dual-list-selector}__item {
    --#{$dual-list-selector}__item--PaddingInlineStart: var(--#{$dual-list-selector}__draggable--item--PaddingInlineStart);
  }

  .#{$button} {
    --#{$button}--FontSize: inherit;

    cursor: grab;

    &:active {
      cursor: grabbing;
    }
  }
}

.#{$dual-list-selector}__item {
  position: relative;
  width: 100%;
  padding-block-start: var(--#{$dual-list-selector}__item--PaddingBlockStart);
  padding-block-end: var(--#{$dual-list-selector}__item--PaddingBlockEnd);
  padding-inline-start: var(--#{$dual-list-selector}__item--PaddingInlineStart);
  padding-inline-end: var(--#{$dual-list-selector}__item--PaddingInlineEnd);
  cursor: pointer;
  outline-offset: -2px;
}

.#{$dual-list-selector}__item-count {
  margin-inline-start: var(--#{$dual-list-selector}__item-count--MarginInlineStart);

  .#{$badge}.pf-m-read {
    --#{$badge}--m-read--BackgroundColor: var(--#{$dual-list-selector}__item--c-badge--m-read--BackgroundColor);
  }
}

.#{$dual-list-selector}__item-text {
  @include pf-v6-text-overflow;

  flex-grow: 1;
  color: var(--#{$dual-list-selector}__item-text--Color);
}

.#{$dual-list-selector}__controls {
  display: flex;
  flex-direction: column;
  grid-area: var(--#{$dual-list-selector}__controls--GridArea);
  gap: var(--#{$dual-list-selector}__controls--Gap);
  align-items: center;
  align-self: center;
  justify-content: center;
  padding-inline-start: var(--#{$dual-list-selector}__controls--PaddingInlineStart);
  padding-inline-end: var(--#{$dual-list-selector}__controls--PaddingInlineEnd);
  margin-block-start: var(--#{$dual-list-selector}__controls--MarginBlockStart);
}

:is(.#{$dual-list-selector}__controls-item, .#{$dual-list-selector}__item-toggle-icon) {
  @include pf-v6-mirror-inline-on-rtl;
}

.#{$dual-list-selector}__item-main {
  display: flex;
  min-width: 0;
}

.#{$dual-list-selector}__item-toggle {
  padding-block-start: var(--#{$dual-list-selector}__item-toggle--PaddingBlockStart);
  padding-block-end: var(--#{$dual-list-selector}__item-toggle--PaddingBlockEnd);
  padding-inline-start: var(--#{$dual-list-selector}__item-toggle--PaddingInlineStart);
  padding-inline-end: var(--#{$dual-list-selector}__item-toggle--PaddingInlineEnd);
  margin-block-start: var(--#{$dual-list-selector}__item-toggle--MarginBlockStart);
  margin-block-end: var(--#{$dual-list-selector}__item-toggle--MarginBlockEnd);
}

.#{$dual-list-selector}__item-check {
  display: flex;
  align-items: center;
  margin-inline-end: var(--#{$dual-list-selector}__item-check--MarginInlineEnd);
}

.#{$dual-list-selector}__item-toggle-icon {
  display: inline-block;
  min-width: var(--#{$dual-list-selector}__item-toggle-icon--MinWidth);
  color: var(--#{$dual-list-selector}__item-toggle-icon--Color, inherit);
  text-align: center;
  transition-timing-function: var(--#{$dual-list-selector}__item-toggle-icon--TransitionTimingFunction);
  transition-duration: var(--#{$dual-list-selector}__item-toggle-icon--TransitionDuration);
  transition-property: transform;
  transform: rotate(var(--#{$dual-list-selector}__item-toggle-icon--Rotate));
}

// stylelint-disable no-duplicate-selectors
.#{$dual-list-selector}__list-item {
  $root: &;
  $nested-item: &;

  @for $i from 1 through $pf-v6-c-dual-list-selector__item--MaxNesting {
    #{$nested-item} {
      --#{$dual-list-selector}__item--PaddingInlineStart: calc(var(--#{$dual-list-selector}__item--nested-indent--base) * #{$i} + var(--#{$dual-list-selector}__item--indent--base));
      --#{$dual-list-selector}__list__list__item-toggle--InsetInlineStart: var(--#{$dual-list-selector}__item--PaddingInlineStart);
    }

    $nested-item: $nested-item + " " + $root;
  }
}
// stylelint-enable

